spacing fix

--- a/public/stylesheets/help.less
+++ b/public/stylesheets/help.less
@@ -2,8 +2,15 @@
 
 .dialog {
   top: ~"calc(50% - 260px)";
+  color: #888;
+  h1 {
+    font-weight: 300;
+    color: #666;
+    margin: 0;
+  }
   .options {
     padding: 0;
+    margin: 2rem auto;
     a.button {
       padding-left: 10px;
       padding-right: 10px;
